adjusted z-index of shareiconsmodal and fixed bottom reactions!

--- a/src/components/ExtraActions/extraActions.module.css
+++ b/src/components/ExtraActions/extraActions.module.css
@@ -5,6 +5,7 @@
     padding: 10px 5px;
     border-bottom: 1px solid var(--softBg);
     align-items: center;
+    z-index: 10;
 }
 
 .shareIcon {
